[gd_scene load_steps=7 format=1]

[ext_resource path="res://host_game_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/host_game/host_bg.png" type="Texture" id=2]
[ext_resource path="res://host_menu.gd" type="Script" id=3]
[ext_resource path="res://ui/icons/start_war.png" type="Texture" id=4]
[ext_resource path="res://fonts/ui_font_32.fnt" type="BitmapFont" id=5]
[ext_resource path="res://ui/icons/back_arrow.png" type="Texture" id=6]

[node name="host_game_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="host_menu" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 843.0
margin/top = 379.0
margin/right = 1173.0
margin/bottom = 449.0
alignment = 0
script/script = ExtResource( 3 )
__meta__ = { "_edit_group_":true }

[node name="add_to_matchlist" type="HBoxContainer" parent="host_menu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 22.0
alignment = 0

[node name="Label" type="Label" parent="host_menu/add_to_matchlist"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 250.0
margin/bottom = 18.0
text = "Add to Public matchlist\?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="network_type" type="CheckButton" parent="host_menu/add_to_matchlist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 254.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 22.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 0
shortcut = null
flat = false

[node name="max_users" type="HBoxContainer" parent="host_menu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 330.0
margin/bottom = 42.0
alignment = 0

[node name="labels" type="HBoxContainer" parent="host_menu/max_users"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 163.0
margin/bottom = 16.0
alignment = 0

[node name="Label" type="Label" parent="host_menu/max_users/labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 79.0
margin/bottom = 15.0
text = "Max Users"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="count" type="Label" parent="host_menu/max_users/labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 83.0
margin/top = 1.0
margin/right = 163.0
margin/bottom = 15.0
text = "2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSlider" type="HSlider" parent="host_menu/max_users"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 167.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 16.0
range/min = 2.0
range/max = 32.0
range/step = 1.0
range/page = 0.0
range/value = 2.0
range/exp_edit = false
range/rounded = true
tick_count = 4
ticks_on_borders = true
focus_mode = 2

[node name="name" type="HBoxContainer" parent="host_menu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 46.0
margin/right = 330.0
margin/bottom = 70.0
alignment = 0

[node name="Label" type="Label" parent="host_menu/name"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 163.0
margin/bottom = 19.0
text = "Server Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line_edit" type="LineEdit" parent="host_menu/name"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 167.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 24.0
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="key" type="HBoxContainer" parent="host_menu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 74.0
margin/right = 330.0
margin/bottom = 98.0
alignment = 0

[node name="Label" type="Label" parent="host_menu/key"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 163.0
margin/bottom = 19.0
text = "Server Key"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line_edit" type="LineEdit" parent="host_menu/key"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 167.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 24.0
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="password" type="HBoxContainer" parent="host_menu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 102.0
margin/right = 330.0
margin/bottom = 126.0
alignment = 0

[node name="Label" type="Label" parent="host_menu/password"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 163.0
margin/bottom = 19.0
text = "Join Password (Optional)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line_edit" type="LineEdit" parent="host_menu/password"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 167.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 24.0
placeholder/alpha = 0.6
secret = true
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="begin" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 953.0
margin/top = 518.0
margin/right = 1081.0
margin/bottom = 646.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[node name="Label" type="Label" parent="begin"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 140.0
margin/right = 109.0
margin/bottom = 173.0
custom_fonts/font = ExtResource( 5 )
text = "Begin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )

[connection signal="pressed" from="begin" to="." method="_on_begin_pressed"]

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]


